Trying to clean up the rdoc a little.

--- a/README
+++ b/README
@@ -2,28 +2,26 @@
 
 A Ruby static HTML templating gem.
 
-== Why?
+=== Why?
 
 Templette was created to make it easy to create and maintain static websites.  It provides a (hopefully) simple structure of pages, templates and helpers.  Templates are the universal page layouts.  Pages are the unique content of a page.
 
-== Use me
+=== Use me
 
-templette <site-name>
+Use <tt>templette <site-name></tt> to generate the framework basics.
 
-Generates the framework basics.
-
-rake build
+<tt>rake build</tt>
 
 Generates the full documents in an 'out' folder in the site root.       
 
 For more information on available rake tasks, check out FileGenerator.
 
-For more info on creating pages, look at Page.
+For more info on creating pages, look at Templette::Page.
 
-== Helper support
+=== Helper support
 
 Automate content and avoid having to update transient information.  By default, a helper will automatically load a helper that shares its name.  Any methods loaded in the helper will be available to the template at build time.
 
-== Site resources
+=== Site resources
 
-Additional resources for a site such as css and images can be managed and built into the site using the resources directory.  All files within the resources dir get copied into your output directory upon build.
+Additional resources for a site such as css and images can be managed and built into the site using the <tt>resources</tt> directory.  All files within the resources dir get copied into your output directory upon build.
