--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
 * Per-site templette config file
 * Optional site subdirectory  (example.com/site-root/)
-* image, css and script tag supprt that will heed optional subdirectory
+* image, css and script tag support that will heed optional subdirectory
