The stuff in the TODO got finished.  Time for new stuff.

--- a/TODO
+++ b/TODO
@@ -1,3 +1,1 @@
-* Per-site templette config file
-* Optional site subdirectory  (example.com/site-root/)
-* image, css and script tag support that will heed optional subdirectory
+* Example info site
