History updated with the newest release stuff.

--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,8 @@
+== 0.5.1 2009-02-26
+
+* Helper path urls can start with http or https
+* Default rendering engine config setting
+
 == 0.5.0 2009-02-23
 
 * Helpers get their own module
