--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,8 @@
+== 0.5.2 2009-03-05
+
+* render call in pages doesn't need full path now, just the path from inside pages
+* Ignore all the icky Haml warnings during a build
+
 == 0.5.1 2009-02-26
 
 * Helper path urls can start with http or https
